<resources>
    <string name="app_name">维度影院</string>

    <string name="welcome_page_title">一场电影</string>
    <string name="welcome_page1_title">荡涤你的心</string>
    <string name="welcome_page2_title">看遍人生百态</string>
    <string name="welcome_page3_title">净化你的灵魂</string>
    <string name="welcome_page4_title1">八维西东通信学院作品</string>
    <string name="welcome_page4_title2">带你开启一段美好的电影之旅</string>
    <string name="my_name_text">请登录</string>
    <string name="welcome_button_text">立即体验</string>
    <string name="lolg_name">维度影院</string>
    <string name="my_messiage_text">我的信息</string>
    <string name="my_rccord_text">购票记录</string>
    <string name="my_attention_text">我的关注</string>
    <string name="my_feedback_text">意见反馈</string>
    <string name="my_version_text">最新版本</string>


    <string name="user_info_title">用户信息</string>
    <string name="user_info_head">用户头像</string>
    <string name="user_info_name">用户昵称</string>
    <string name="user_info_sex">用户性别</string>
    <string name="user_info_birthday">出生日期</string>
    <string name="user_info_phone">手机号码</string>
    <string name="user_info_emil">邮箱</string>
    <string name="user_info_reset">重置密码</string>
    <string name="user_info_reset_pwd">重置密码</string>
    <string name="user_attention_title">我的关注</string>
    <string name="user_attention_film">电影</string>
    <string name="user_attention_cinema">影院</string>
    <string name="user_feedback_title">意见反馈</string>
    <string name="user_feedback_hint">写下您对产品的感受吧!工作人员将会在第一时间评估处理.</string>
    <string name="user_feedback_winhint">感谢您对维度影院的关注与支持,我们会认真处理您的反馈,尽快修复和完善相关功能.</string>
    <string name="user_feedback_wintitle">反馈成功</string>
    <string name="user_info_reset_info">修改个人信息</string>
    <string name="user_reset_info_title">修改个人信息</string>
    <string name="user_reset_info_name">请输入新昵称</string>
    <string name="user_reset_info_sex">性别</string>
    <string name="user_reset_info_birthday">请输入出生日期</string>
    <string name="user_system_messages_title">系统消息</string>

</resources>
