<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_reset_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/user_reset_info_title"
        android:textColor="@color/color333333"
        android:textSize="@dimen/sp_14" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_reset_info_title"
        android:layout_marginTop="-1dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@drawable/my_item_layout_shape"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_24"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_name"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/user_reset_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/my_item_layout_shape"
                    android:hint="@string/user_reset_info_name"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/user_reset_info_sex_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@drawable/my_item_layout_shape"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_24"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_sex"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/user_reset_info_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/user_reset_info_sex_img"
                    android:text="@string/user_reset_info_sex"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/user_reset_info_sex_img"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/com_icon_next_default" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@drawable/my_item_layout_shape"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_24"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_birthday"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/user_reset_info_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/my_item_layout_shape"
                    android:hint="@string/user_reset_info_birthday"
                    android:inputType="date"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@drawable/my_item_layout_shape"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_24"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_phone"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/user_reset_info_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/my_item_layout_shape"
                    android:hint="@string/user_info_phone"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@drawable/my_item_layout_shape"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="    邮箱     "
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/user_reset_info_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/my_item_layout_shape"
                    android:hint="@string/user_info_emil"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>


            <Button
                android:id="@+id/user_reset_info_updata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@drawable/user_info_logout_shape"
                android:text="确认修改" />
        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/user_reset_info_back"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginBottom="18dp"
        android:src="@drawable/com_icon_my_default1" />

</RelativeLayout>