<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/user_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/user_info_title"
        android:textColor="@color/color333333"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:id="@+id/user_info_layout1"
        android:layout_width="@dimen/dp_312"
        android:layout_height="@dimen/dp_178"
        android:layout_below="@+id/user_info_title"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/my_item_layout_shape"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_head"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <ImageView
                android:id="@+id/user_info_head"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:src="@mipmap/ic_launcher" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentTop="true"
                android:background="@color/colorf2f2f2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/user_info_name"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:id="@+id/user_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_name" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentTop="true"
                android:background="@color/colorf2f2f2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/user_info_sex"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:id="@+id/user_info_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_sex" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentTop="true"
                android:background="@color/colorf2f2f2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="@string/user_info_birthday"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:id="@+id/user_info_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="@string/user_info_birthday" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/user_info_layout2"
        android:layout_width="@dimen/dp_312"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_info_layout1"

        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/my_item_layout_shape"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/user_info_phone"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:id="@+id/user_info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/user_info_phone" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentTop="true"
                android:background="@color/colorf2f2f2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/user_info_emil"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:id="@+id/user_info_emil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_emil" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_layout_3"
        android:layout_width="@dimen/dp_312"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_info_layout2"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/my_item_layout_shape"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/user_info_reset_pwd"
                android:textColor="@color/color333333"
                android:textSize="@dimen/sp_14" />


            <ImageView
                android:id="@+id/user_info_reset_pwd"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:src="@drawable/com_icon_next_default" />
        </RelativeLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/user_info_back"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:src="@drawable/com_icon_my_default1" />
</RelativeLayout>